reveal carousel arrows and fix alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -550,20 +550,33 @@ svg {
 
 /* PROJECT SECTION STYLES */
 
+.slick-prev,
+.slick-next {
+    z-index: 9999;
+}
+
+.slick-prev {
+    margin-left: 2rem;
+}
+
+.slick-next {
+    /* to fix arrows alignment */
+    margin-top: -0.3rem; 
+    margin-right: 3.5rem;
+}
+
 .slick-prev::before,
 .slick-next::before {
-    height: 40px !important;
-    font-size: 40px !important;
+    height: 50px !important;
+    font-size: 50px !important;
     z-index: 9999;
 }
 
 .slick-prev::before {
-    position:relative;
     color: var(--clr-blue) !important;
 }
 
 .slick-next::before {
-    position:relative;
     color: var(--clr-blue) !important;
 }
 
